{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 356,
  "lineage": "5e497dd6-5431-09ca-2fce-f78e057998c5",
  "resources": [
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-private-lb/240bfb350af39c8b",
            "arn_suffix": "app/terraform-project-private-lb/240bfb350af39c8b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-terraform-project-private-lb-809734210.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-private-lb/240bfb350af39c8b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-project-private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086573fb9cd4988ed"
              },
              {
                "subnet_id": "subnet-0aa90f5807e7924b5"
              },
              {
                "subnet_id": "subnet-0b5bf9ed5b2a393c1"
              }
            ],
            "subnets": [
              "subnet-086573fb9cd4988ed",
              "subnet-0aa90f5807e7924b5",
              "subnet-0b5bf9ed5b2a393c1"
            ],
            "vpc_id": "vpc-02f3f8240c834f497",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-public-lb/a83ad70ebe2de5d6",
            "arn_suffix": "app/terraform-project-public-lb/a83ad70ebe2de5d6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-project-public-lb-1663593187.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-public-lb/a83ad70ebe2de5d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-project-public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e8735adc9fb3878"
              },
              {
                "subnet_id": "subnet-01c52e32bb622b960"
              },
              {
                "subnet_id": "subnet-05f1e2783745e05b5"
              }
            ],
            "subnets": [
              "subnet-00e8735adc9fb3878",
              "subnet-01c52e32bb622b960",
              "subnet-05f1e2783745e05b5"
            ],
            "vpc_id": "vpc-02f3f8240c834f497",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-private-lb/240bfb350af39c8b/00e96a3ee3943180",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-private-lb/240bfb350af39c8b/00e96a3ee3943180",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-private-lb/240bfb350af39c8b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.private_lb",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:loadbalancer/app/terraform-project-public-lb/a83ad70ebe2de5d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_lb",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "private_lb_routing_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/auth-target-group/8b8601620c1ded8c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-private-lb/240bfb350af39c8b/00e96a3ee3943180/805fdd870cbeeeda",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/auth/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-private-lb/240bfb350af39c8b/00e96a3ee3943180/805fdd870cbeeeda",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-private-lb/240bfb350af39c8b/00e96a3ee3943180",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.private_lb",
            "module.load-balancers.aws_lb_listener.private_lb_listener",
            "module.load-balancers.aws_lb_target_group.auth_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "public_lb_routing_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/heating-target-group/460465eb9c01578c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/9b0a4ebd2fc201de",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/9b0a4ebd2fc201de",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_lb",
            "module.load-balancers.aws_lb_listener.public_lb_listener",
            "module.load-balancers.aws_lb_target_group.heating_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "public_lb_routing_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/lighting-target-group/b7e4d6cc9a5e650e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/458e8b65ec7e40d8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lighting"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/458e8b65ec7e40d8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_lb",
            "module.load-balancers.aws_lb_listener.public_lb_listener",
            "module.load-balancers.aws_lb_target_group.lighting_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "public_lb_routing_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/status-target-group/5760344e8d4d6a3b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/d2d06d41e6da9e82",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener-rule/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243/d2d06d41e6da9e82",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:listener/app/terraform-project-public-lb/a83ad70ebe2de5d6/f6c64a43afaf5243",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_lb",
            "module.load-balancers.aws_lb_listener.public_lb_listener",
            "module.load-balancers.aws_lb_target_group.status_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/auth-target-group/8b8601620c1ded8c",
            "arn_suffix": "targetgroup/auth-target-group/8b8601620c1ded8c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/auth-target-group/8b8601620c1ded8c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "heating_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/heating-target-group/460465eb9c01578c",
            "arn_suffix": "targetgroup/heating-target-group/460465eb9c01578c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/heating-target-group/460465eb9c01578c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lighting_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/lighting-target-group/b7e4d6cc9a5e650e",
            "arn_suffix": "targetgroup/lighting-target-group/b7e4d6cc9a5e650e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/lighting-target-group/b7e4d6cc9a5e650e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lighting-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "status_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/status-target-group/5760344e8d4d6a3b",
            "arn_suffix": "targetgroup/status-target-group/5760344e8d4d6a3b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/status-target-group/5760344e8d4d6a3b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "auth_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/auth-target-group/8b8601620c1ded8c-20240306093231629300000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/auth-target-group/8b8601620c1ded8c",
            "target_id": "i-0aa4260d903d3ce75"
          },
          "dependencies": [
            "module.load-balancers.aws_lb_target_group.auth_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.auth_instance",
            "module.servers.aws_instance.heating_instance",
            "module.servers.aws_instance.lighting_instance",
            "module.servers.aws_instance.status_instance",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "heating_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/heating-target-group/460465eb9c01578c-20240306093231480700000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/heating-target-group/460465eb9c01578c",
            "target_id": "i-0f3c2bbc5b5af6f11"
          },
          "dependencies": [
            "module.load-balancers.aws_lb_target_group.heating_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.auth_instance",
            "module.servers.aws_instance.heating_instance",
            "module.servers.aws_instance.lighting_instance",
            "module.servers.aws_instance.status_instance",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lighting_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/lighting-target-group/b7e4d6cc9a5e650e-20240306093231631700000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/lighting-target-group/b7e4d6cc9a5e650e",
            "target_id": "i-0c80d106128e08f93"
          },
          "dependencies": [
            "module.load-balancers.aws_lb_target_group.lighting_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.auth_instance",
            "module.servers.aws_instance.heating_instance",
            "module.servers.aws_instance.lighting_instance",
            "module.servers.aws_instance.status_instance",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "status_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/status-target-group/5760344e8d4d6a3b-20240306094406681500000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891376936320:targetgroup/status-target-group/5760344e8d4d6a3b",
            "target_id": "i-089ce712dc52e7288"
          },
          "dependencies": [
            "module.load-balancers.aws_lb_target_group.status_target_group",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.auth_instance",
            "module.servers.aws_instance.heating_instance",
            "module.servers.aws_instance.lighting_instance",
            "module.servers.aws_instance.status_instance",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:security-group/sg-03a25120919ef67a0",
            "description": "Allow egress inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a25120919ef67a0",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "891376936320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:security-group/sg-08b2cf7d905ecc733",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-08b2cf7d905ecc733",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "891376936320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:security-group/sg-0b23262bc04c1b9e9",
            "description": "Allow https inbound traffic",
            "egress": [],
            "id": "sg-0b23262bc04c1b9e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "891376936320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:security-group/sg-076cc7fe90d4c2bce",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-076cc7fe90d4c2bce",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.19.82.126/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "891376936320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2959517972",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03a25120919ef67a0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-1426842018",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b2cf7d905ecc733",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1746215245",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b23262bc04c1b9e9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_https",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "86.19.82.126/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-938528777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076cc7fe90d4c2bce",
            "security_group_rule_id": "sgr-07703b2ab24fad32e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "auth_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5f882be1900e43b",
            "arn": "arn:aws:ec2:eu-west-2:891376936320:instance/i-0aa4260d903d3ce75",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa4260d903d3ce75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UYScutiKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b76c095b9a8ef98b",
            "private_dns": "ip-10-0-8-201.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.201",
            "public_dns": "ec2-35-178-132-83.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.132.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e7b6b9f5137d798",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa90f5807e7924b5",
            "tags": {
              "Name": "auth"
            },
            "tags_all": {
              "Name": "auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "heating_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5f882be1900e43b",
            "arn": "arn:aws:ec2:eu-west-2:891376936320:instance/i-0f3c2bbc5b5af6f11",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3c2bbc5b5af6f11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UYScutiKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011cdf685b3795389",
            "private_dns": "ip-10-0-1-126.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-35-176-21-151.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.21.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01069f57e6ce5f829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c52e32bb622b960",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lighting_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5f882be1900e43b",
            "arn": "arn:aws:ec2:eu-west-2:891376936320:instance/i-0c80d106128e08f93",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c80d106128e08f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UYScutiKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09bce0cce148043a8",
            "private_dns": "ip-10-0-0-141.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-35-178-167-144.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.167.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076b48a227ecd45ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f1e2783745e05b5",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5f882be1900e43b",
            "arn": "arn:aws:ec2:eu-west-2:891376936320:instance/i-089ce712dc52e7288",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089ce712dc52e7288",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UYScutiKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085946d4a9809af50",
            "private_dns": "ip-10-0-2-207.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "public_dns": "ec2-18-168-196-133.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.196.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038394af163fefacc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e8735adc9fb3878",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a25120919ef67a0",
              "sg-076cc7fe90d4c2bce",
              "sg-08b2cf7d905ecc733",
              "sg-0b23262bc04c1b9e9"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "auth_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000890a92f59852a6",
            "association_id": "eipassoc-01ba929776b359900",
            "domain": "vpc",
            "id": "eipalloc-000890a92f59852a6",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-073829fc6923b12be",
            "private_dns": "ip-10-0-0-164.eu-west-2.compute.internal",
            "private_ip": "10.0.0.164",
            "public_dns": "ec2-35-178-90-109.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.90.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:internet-gateway/igw-077b38f31acc8338a",
            "id": "igw-077b38f31acc8338a",
            "owner_id": "891376936320",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "auth_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000890a92f59852a6",
            "association_id": "eipassoc-01ba929776b359900",
            "connectivity_type": "public",
            "id": "nat-0e665077564f69c68",
            "network_interface_id": "eni-073829fc6923b12be",
            "private_ip": "10.0.0.164",
            "public_ip": "35.178.90.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f1e2783745e05b5",
            "tags": {
              "Name": "auth NAT"
            },
            "tags_all": {
              "Name": "auth NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.auth_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:route-table/rtb-032de2751cf33f056",
            "id": "rtb-032de2751cf33f056",
            "owner_id": "891376936320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e665077564f69c68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.auth_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.auth_nat",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:route-table/rtb-043db653bdbf48117",
            "id": "rtb-043db653bdbf48117",
            "owner_id": "891376936320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077b38f31acc8338a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d312ce76944abe5",
            "route_table_id": "rtb-032de2751cf33f056",
            "subnet_id": "subnet-0aa90f5807e7924b5"
          },
          "dependencies": [
            "module.vpc.aws_eip.auth_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.auth_nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06297d6be93223fe4",
            "route_table_id": "rtb-043db653bdbf48117",
            "subnet_id": "subnet-05f1e2783745e05b5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a183a56bc66044c8",
            "route_table_id": "rtb-043db653bdbf48117",
            "subnet_id": "subnet-01c52e32bb622b960"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c44b2ea9f6fc8f1",
            "route_table_id": "rtb-043db653bdbf48117",
            "subnet_id": "subnet-00e8735adc9fb3878"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-0aa90f5807e7924b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa90f5807e7924b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-086573fb9cd4988ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086573fb9cd4988ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-0b5bf9ed5b2a393c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5bf9ed5b2a393c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-05f1e2783745e05b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f1e2783745e05b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-01c52e32bb622b960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c52e32bb622b960",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:subnet/subnet-00e8735adc9fb3878",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e8735adc9fb3878",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376936320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f3f8240c834f497"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891376936320:vpc/vpc-02f3f8240c834f497",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0a0d5e18b5db76468",
            "default_route_table_id": "rtb-0555b25e48dbd3195",
            "default_security_group_id": "sg-0ac204a5ad007b002",
            "dhcp_options_id": "dopt-01b56e3ec17313d09",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f3f8240c834f497",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0555b25e48dbd3195",
            "owner_id": "891376936320",
            "tags": {
              "Name": "terraform-project-VPC"
            },
            "tags_all": {
              "Name": "terraform-project-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}